--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ background-image: linear-gradient(180deg, #FFFFFF 0%, #6284FF 50%, #FF0000 100%)
     background-color: royalblue;
     line-height:3;
     text-align:center;
+    
 
 }
 canvas{
@@ -31,4 +32,5 @@ canvas{
     margin: 20px;
     padding: 20px;
     background-color: paleturquoise;
+    border: 1px solid black;
 }
